--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
   },
   "homepage": "https://github.com/alexandrelam/slam-poker#readme",
   "dependencies": {
+    "@types/winston": "^2.4.4",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "winston": "^3.17.0",
+    "winston-loki": "^6.1.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
