--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "prom-client": "^15.1.3",
     "socket.io": "^4.8.1",
     "winston": "^3.17.0",
     "winston-loki": "^6.1.3"
