--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,10 @@ PORT=3001
 NODE_ENV=development
 CORS_ORIGIN=http://localhost:3000
 
+# Loki logging configuration
 LOKI_URL=
 LOKI_ENABLED=false
+
+# Prometheus metrics configuration
+METRICS_ENABLED=true
+METRICS_PORT=9090
