--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,4 @@ LOKI_ENABLED=false
 # Prometheus metrics configuration
 METRICS_ENABLED=true
 METRICS_PORT=9090
+PROMETHEUS_URL=http://localhost:9090
